sample/k8s-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: http-svc
  name: http-svc
  namespace: tt
spec:
  replicas: 2
  selector:
    matchLabels:
      run: http-svc
  template:
    metadata:
      labels:
        run: http-svc
    spec:
      containers:
        - name: http-svc
          image: cilium/echoserver:latest
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: http-svc
  name: http-svc
  namespace: tt
spec:
  type: NodePort
  ports:
    - name: port-1
      port: 8083
      protocol: TCP
      targetPort: 8080
  selector:
    run: http-svc
