sample/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo
  namespace: tt
  labels:
    app: spring-boot-demo
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 18081
    nodePort: 31081
  selector:
    app: spring-boot-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-demo
  labels:
    app: spring-boot-demo
  namespace: tt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-demo
  template:
    metadata:
      labels:
        app: spring-boot-demo
    spec:
      containers:
      - name: spring-boot-demo
        image: www.fedemo.cn:8082/pi-dev/spring-boot-demo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 18081
      imagePullSecrets:
      - name: login
