sample/springboot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-nginx
  namespace: tt
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: user.flyrise.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: spring-boot-demo
          servicePort: 8081
